<resources>
    <string name="app_name">TapShield</string>
    <string name="ts_screen_home">Home</string>
    <string name="ts_screen_alert">Alert</string>
    <string name="ts_screen_chat">Chat</string>
    <string name="ts_screen_report_list">Report: Pick type</string>
    <string name="ts_screen_report">Submit Tip</string>
    <string name="ts_screen_report_details">Report Details</string>
    <string name="ts_screen_profile">Profile</string>
    <string name="ts_screen_profile_basic">Profile: Basic Info</string>
    <string name="ts_screen_profile_appearance">Profile: Appearance</string>
    <string name="ts_screen_profile_medical">Profile: Medical Info</string>
    <string name="ts_screen_profile_emergency">Profile: Emergency Contact</string>
    <string name="ts_screen_settings">Settings</string>
    <string name="ts_screen_about">About TapShield</string>
    <string name="ts_screen_oob">Out of Bounds or Hours</string>
    <string name="ts_screen_security">Change Passcode or Password</string>
    <string name="ts_screen_notifications">Notifications</string>
    <string name="ts_screen_entourage_destination">Entourage: Pick Destination</string>
    <string name="ts_screen_entourage_route">Entourage: Pick Route</string>
    <string name="ts_screen_entourage_etacontacts">Entourage: Set ETA and Contacts</string>
    <string name="ts_no_org_emergency_number">911</string>
    <string name="ts_common_login">Log In</string>
    <string name="ts_common_signup">Sign Up</string>
    <string name="ts_common_code">Code</string>
    <string name="ts_common_firstname">First Name</string>
    <string name="ts_common_lastname">Last Name</string>
    <string name="ts_common_description">Description</string>
    <string name="ts_common_ok">OK</string>
    <string name="ts_common_yes">Yes</string>
    <string name="ts_common_no">No</string>
    <string name="ts_common_cancel">Cancel</string>
    <string name="ts_common_search">Search</string>
    <string name="ts_common_done">Done</string>
    <string name="ts_common_start">Start</string>
    <string name="ts_common_stop">Stop</string>
    <string name="ts_common_add">Add</string>
    <string name="ts_common_prev">Prev</string>
    <string name="ts_common_next">Next</string>
    <string name="ts_common_edit">Edit</string>
    <string name="ts_common_delete">Delete</string>
    <string name="ts_common_error">Error</string>
    <string name="ts_common_settings">Settings</string>
    <string name="ts_main_dialog_disconnected_title">No Network Data Connection</string>
    <string name="ts_main_dialog_disconnected_button_call_preffix">Call</string>
    <string name="ts_welcome_skip">Skip</string>
    <string name="ts_welcome_noaccount">No Account?</string>
    <string name="ts_welcome_forgotpassword">Forgot Password?</string>
    <string name="ts_welcome_intro_1">View local crime, report tips, and be notified of safety alerts in your area.\n\n\n\n</string>
    <string name="ts_welcome_intro_2">One tap sends your real-time location and profile info to authorities when you hit "Alert".\nThe app automatically launches a call to dispatchers, too.</string>
    <string name="ts_welcome_intro_3">Going on a run while listening to music?\n\nTurn on Yank™ for an added layer of security. TapShield will automatically send an ‘Alert’ if headphones are pulled out of your device on purpose or by force. Don’t worry; you’ll have 10 seconds to disarm the ‘Alert’!</string>
    <string name="ts_welcome_intro_4">Walk with an Entourage™ Set your route before you go. If you don\'t arrive in time, your safety network is automatically notified.</string>
    <string name="ts_welcome_intro_5">If your college subscribes to TapShield, safety alerts originating from inside school boundaries are routes to campus dispatchers.</string>
    <string name="ts_welcome_intro_6">If you use TapShield outside of campus boundaries, the app will automatically dial 9&#8211;1&#8211;1 for you to call.</string>
    <string name="ts_welcome_fragment_login_edit_email_hint">Your Email</string>
    <string name="ts_welcome_fragment_login_edit_password_hint">Your Password</string>
    <string name="ts_welcome_fragment_login_dialog_loggingin_title">Logging in</string>
    <string name="ts_welcome_fragment_login_dialog_loggingin_message">Please wait&#8230;</string>
    <string name="ts_welcome_fragment_login_dialog_orgbelonging_message">Do you belong to an organization that uses TapShield?</string>
    <string name="ts_welcome_fragment_login_toast_passwordreset_emailinvalid">Please enter email in the field before requesting password reset</string>
    <string name="ts_welcome_fragment_login_toast_passwordreset_ok">Password reset email sent. Check your inbox!</string>
    <string name="ts_welcome_fragment_login_toast_login_emailinvalid">Invalid email</string>
    <string name="ts_welcome_fragment_login_toast_login_passwordinvalid">Invalid password</string>
    <string name="ts_welcome_fragment_login_toast_login_error_default">Error logging in. please try again later or contact support</string>
    <string name="ts_welcome_fragment_login_toast_login_error_badcredentials">Wrong login combination!</string>
    <string name="ts_welcome_fragment_login_toast_login_error_emailunverified">You need to verify your email before logging in!</string>
    <string name="ts_registration_actionbar_title_pickorg">Pick your organization</string>
    <string name="ts_registration_actionbar_title_createaccount">Create account</string>
    <string name="ts_registration_actionbar_title_emailverification">Email verification</string>
    <string name="ts_registration_actionbar_title_phoneconfirmation">Phone confirmation</string>
    <string name="ts_registration_actionbar_title_profile">Profile</string>
    <string name="ts_registration_dialog_cancel_aftercreation_message">You are past the point of creating the account. Would you like to start over?</string>
    <string name="ts_registration_dialog_cancel_simple_message">Are you sure you want to start over?</string>
    <string name="ts_organizationselection_dialog_loading_title">Please wait</string>
    <string name="ts_organizationselection_dialog_loading_message">Retrieving list of organizations&#8230;</string>
    <string name="ts_organizationselection_toast_loading_error">Error retrieving list</string>
    <string name="ts_organizationselection_searchview_hint">Search All</string>
    <string name="ts_organizationselection_list_empty">No nearby organizations. Tap \'search\' icon to see all organization.</string>
    <string name="ts_setorganization_showall">Show All</string>
    <string name="ts_setorganization_filter">Filter</string>
    <string name="ts_setorganization_listempty">No nearby organizations. Tap \'Show All.\'</string>
    <string name="ts_setorganization_dialog_notnow_title">Pick an Organization later</string>
    <string name="ts_setorganization_dialog_notnow_message">You can always change the organization by going into \'Settings\' and then \'Add or Change Organization\'.</string>
    <string name="ts_verifyphone_wait_title">Please wait</string>
    <string name="ts_verifyphone_wait_message">Verifying code&#8230;</string>
    <string name="ts_verifyphone_ok">Code verified</string>
    <string name="ts_verifyphone_error_prefix">Error verifying:</string>
    <string name="ts_verifyphone_update_error_prefix">Error updating changed number:</string>
    <string name="ts_verifyphone_instructions">Enter phone number and then tap Re-send SMS to receive the verification code.</string>
    <string name="ts_fragment_requiredinfo_edit_email_hint">Email Address</string>
    <string name="ts_fragment_requiredinfo_edit_password_hint">Password</string>
    <string name="ts_fragment_requiredinfo_edit_passcode_hint">Passcode</string>
    <string name="ts_fragment_requiredinfo_edit_phone_hint">Phone Number</string>
    <string name="ts_fragment_requiredinfo_text_phonenotice">We will only use your phone number to contact you in case of emergency</string>
    <string name="ts_fragment_requiredinfo_dialog_signup_title">Signing Up</string>
    <string name="ts_fragment_requiredinfo_dialog_signup_message">Please wait&#8230;</string>
    <string name="ts_fragment_requiredinfo_error_domainrequired_prefix">This organization requires emails ending in </string>
    <string name="ts_fragment_requiredinfo_error_emailinvalid">Email is not valid</string>
    <string name="ts_fragment_requiredinfo_error_passwordshort">It has to be at least 4 characters</string>
    <string name="ts_fragment_requiredinfo_error_passcodeshort">It has to be 4 digits</string>
    <string name="ts_fragment_requiredinfo_error_phoneinvalid">It has to be 10 digits long</string>
    <string name="ts_fragment_requiredinfo_signup_done">Signed in!</string>
    <string name="ts_fragment_emailconfirmation_complete">Complete Verification</string>
    <string name="ts_fragment_phoneconfirmation_text_instructions_bottom">Please enter your code below:</string>
    <string name="ts_fragment_phoneconfirmation_button_resend">Re-send SMS</string>
    <string name="ts_fullprofile_button_basic">Basic Information</string>
    <string name="ts_fullprofile_button_contact">Contact Information</string>
    <string name="ts_fullprofile_button_appearance">Appearance</string>
    <string name="ts_fullprofile_button_medical">Medical Information</string>
    <string name="ts_fullprofile_button_emergency">Emergency Contact</string>
    <string name="ts_fullprofile_disclaimer">We will only use your personal information to assist authorities in case of emergency. The more information you provide, the easier will be to help you out!</string>
    <string name="ts_profile_appearance_race">Race</string>
    <string name="ts_profile_appearance_haircolor">Hair Color</string>
    <string name="ts_profile_appearance_weight">Weight</string>
    <string name="ts_profile_appearance_height">Height</string>
    <string name="ts_profile_contact_header_names">Contact Name</string>
    <string name="ts_profile_contact_header_other">Other</string>
    <string name="ts_profile_contact_edit_first_hint">First Name</string>
    <string name="ts_profile_contact_edit_last_hint">Last Name</string>
    <string name="ts_profile_contact_edit_phone_hint">Phone Number</string>
    <string name="ts_dialpad_message">Enter your passcode to disarm</string>
    <string name="ts_dialpad_button_1">1</string>
    <string name="ts_dialpad_button_2">2</string>
    <string name="ts_dialpad_button_3">3</string>
    <string name="ts_dialpad_button_4">4</string>
    <string name="ts_dialpad_button_5">5</string>
    <string name="ts_dialpad_button_6">6</string>
    <string name="ts_dialpad_button_7">7</string>
    <string name="ts_dialpad_button_8">8</string>
    <string name="ts_dialpad_button_9">9</string>
    <string name="ts_dialpad_button_0">0</string>
    <string name="ts_dialpad_button_clear">Clear</string>
    <string name="ts_dialpad_button_delete">Delete</string>
    <string name="ts_settings_org_title">Add or Change Organization</string>
    <string name="ts_settings_org_key">com.tapshield.android.settings.org.key</string>
    <string name="ts_settings_passcode_title">Change Your Passcode</string>
    <string name="ts_settings_passcode_summary">Your passcode verifies your identity</string>
    <string name="ts_settings_passcode_key">com.tapshield.android.settings.passcode.key</string>
    <string name="ts_settings_logout_title">Sign Out</string>
    <string name="ts_settings_logout_key">com.tapshield.android.settings.logout.key</string>
    <string name="ts_settings_about_title">About TapShield</string>
    <string name="ts_settings_about_key">com.tapshield.android.settings.about.key</string>
    <string name="ts_settings_feedback_title">Feedback</string>
    <string name="ts_settings_feedback_key">com.tapshield.android.settings.feedback.key</string>
    <string name="ts_access_profile_picture">Set or change profile picture.</string>
</resources>