<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:layout_width="wrap_content"
        android:title="@string/ts_settings_category" >
        
        <Preference
            android:title="@string/ts_settings_passcode_title"
            android:summary="@string/ts_settings_passcode_summary"
            android:key="@string/ts_settings_passcode_key"/>
        
        <Preference
            android:title="@string/ts_settings_org_title"
            android:key="@string/ts_settings_org_key"/>
        
        <Preference
            android:title="@string/ts_settings_logout_title"
            android:key="@string/ts_settings_logout_key"/>
    </PreferenceCategory>
    
    <PreferenceCategory
        android:title="@string/ts_settings_other_category">
        
        <Preference
            android:title="@string/ts_settings_feedback_title"
            android:key="@string/ts_settings_feedback_key"/>
        
        <Preference
            android:title="@string/ts_settings_about_title"
            android:key="@string/ts_settings_about_key"/>
    </PreferenceCategory>
</PreferenceScreen>
