<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TapShieldHeader"
            android:text="@string/ts_profile_contact_header_names"/>
        
        <EditText
            android:id="@+id/profile_contact_edit_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/ts_brand_dark"
            android:textColorHint="@color/ts_gray_dark"
            android:hint="@string/ts_profile_contact_edit_first_hint"/>
        
        <EditText
            android:id="@+id/profile_contact_edit_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/ts_brand_dark"
            android:textColorHint="@color/ts_gray_dark"
            android:hint="@string/ts_profile_contact_edit_last_hint"/>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TapShieldHeader"
            android:text="@string/ts_profile_contact_header_other"/>
        
        <EditText
            android:id="@+id/profile_contact_edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/ts_brand_dark"
            android:textColorHint="@color/ts_gray_dark"
            android:hint="@string/ts_profile_contact_edit_phone_hint"
            android:inputType="phone"/>
        
        <Spinner
            android:id="@+id/profile_contact_spinner_relationship"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/ts_profile_contact_relationships"/>
    </LinearLayout>
</ScrollView>
