<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/fragment_requiredinfo_edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:hint="@string/ts_fragment_requiredinfo_edit_email_hint" />

        <EditText
            android:id="@+id/fragment_requiredinfo_edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textPassword"
            android:hint="@string/ts_fragment_requiredinfo_edit_password_hint"/>

        <EditText
            android:id="@+id/fragment_requiredinfo_edit_passcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="4"
            android:inputType="numberPassword"
            android:hint="@string/ts_fragment_requiredinfo_edit_passcode_hint"/>
        
        <EditText
            android:id="@+id/fragment_requiredinfo_edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="phone"
            android:hint="@string/ts_fragment_requiredinfo_edit_phone_hint"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>