<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/ts_common_spacing_m">
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/ts_common_spacing_m"
	        android:gravity="center"
	        android:textColor="@color/ts_gray_dark"
	        android:text="@string/ts_verifyphone_instructions"/>
	    
	    <EditText
	        android:id="@+id/verifyphone_edit_phone"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/ts_common_spacing_m"
	        android:gravity="center"
	        android:inputType="phone"
	        android:drawableLeft="@drawable/ic_create_phone"
	        android:textColor="@color/ts_brand_light"
	        android:textColorHint="@color/ts_gray_dark"/>
	
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="@dimen/ts_common_spacing_s"
	        android:gravity="center"
	        android:textColor="@color/ts_gray_dark"
	        android:text="@string/ts_fragment_phoneconfirmation_text_instructions_bottom"/>
	    
	    <EditText
	        android:id="@+id/verifyphone_edit_code"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/ts_common_spacing_m"
	        android:gravity="center"
	        android:maxLength="4"
	        android:inputType="number"
	        android:hint="@string/ts_common_code"/>
	    
	    <Button
	        android:id="@+id/verifyphone_button_resend"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/ts_common_spacing_m"
	        android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
	        android:text="@string/ts_fragment_phoneconfirmation_button_resend"
	        style="@style/TapShieldButton"/>
	    
	</LinearLayout>
    
</ScrollView>
