<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
	            
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#252525">

            <ImageView
                android:id="@+id/fullprofile_image_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/ts_common_spacing_l">

                    <ImageButton
	                    android:id="@+id/fullprofile_imagebutton_picture"
	                    android:layout_width="@dimen/ts_fullprofile_picture"
	                    android:layout_height="@dimen/ts_fullprofile_picture"
	                    android:layout_marginBottom="@dimen/ts_common_spacing_s"
	                    android:background="@null"
	                    android:contentDescription="@string/ts_access_profile_picture"
	                    android:scaleType="fitCenter"
	                    android:src="@drawable/ts_avatar_default"/>
                    
                    <Button
                        android:id="@+id/fullprofile_button_picture"
                        android:layout_width="wrap_content"
                        android:layout_height="18dp"
                        android:text="Change"
                        android:textSize="12sp"
                        android:textColor="@android:color/white"
                        android:background="@color/ts_brand_light"
                        android:layout_gravity="bottom|center_horizontal"/>
                </FrameLayout>

                <TextView
                    android:id="@+id/fullprofile_text_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/ts_fullprofile_text_name" />
            </LinearLayout>
        </FrameLayout>
        
        <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:background="@android:color/white"
	        android:divider="@drawable/ts_divider_horizontal_gray"
	        android:showDividers="middle">
	        
	        <Button
	            android:id="@+id/fullprofile_button_basic"
	            android:text="@string/ts_fullprofile_button_basic"
	            android:drawableLeft="@drawable/ts_profile_basic"
	            style="@style/TapShieldProfileButton"/>
	        
	        <Button
                android:id="@+id/fullprofile_button_contact"
                android:text="@string/ts_fullprofile_button_contact"
                android:drawableLeft="@drawable/ts_profile_contact"
                style="@style/TapShieldProfileButton"/>
	        
	        <Button
                android:id="@+id/fullprofile_button_appearance"
                android:text="@string/ts_fullprofile_button_appearance"
                android:drawableLeft="@drawable/ts_profile_appearance"
                style="@style/TapShieldProfileButton"/>
	        
	        <Button
                android:id="@+id/fullprofile_button_medical"
                android:text="@string/ts_fullprofile_button_medical"
                android:drawableLeft="@drawable/ts_profile_medical"
                style="@style/TapShieldProfileButton"/>
	        
	        <Button
                android:id="@+id/fullprofile_button_emergency"
                android:text="@string/ts_fullprofile_button_emergency"
                android:drawableLeft="@drawable/ts_profile_emerencycontact"
                style="@style/TapShieldProfileButton"/>
	    </LinearLayout>
	    
        <TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/ts_fullprofile_disclaimer"
			android:gravity="center"
			android:paddingTop="@dimen/ts_common_spacing_xs"
			android:paddingBottom="@dimen/ts_common_spacing_xs"
			android:paddingLeft="@dimen/ts_common_spacing_m"
			android:paddingRight="@dimen/ts_common_spacing_m"/>
    </LinearLayout>
</ScrollView>
